--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,35 +5,52 @@ on:
   push:
     branches:
       - portfolio # TODO: Should only run on main
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "deploy"
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Java 17 
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
-      - uses: subosito/flutter-action@v2
+
+      - name: Setup flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: stable
-
-      - name: 'Run flutter pub get'
+      - name: Run flutter pub get
         run: flutter pub get
       # - name: 'Run Test(s)'
       #   run: flutter test
       - name: Enable flutter web
         run: flutter config --enable-web
-      - name: 'Build web app'
+      - name: Build web app
         run: flutter build web
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+          path: ./build/web
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
