--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,15 @@ permissions:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: 'Run tests'
+  #       run: flutter test
+
   build:
+    # needs: test
+
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -32,19 +40,17 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Setup flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
       - name: Run flutter pub get
         run: flutter pub get
-      # - name: 'Run Test(s)'
-      #   run: flutter test
       - name: Enable flutter web
         run: flutter config --enable-web
       - name: Build web app
         run: flutter build web
-        
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
