--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_adaptive_scaffold: ^0.3.1
   google_fonts: ^6.2.1
 
 dev_dependencies:
