Add details about recent projects

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: portfolio
-description: "A new Flutter project."
+description: "Benjamin Agardh's portfolio website"
 publish_to: 'none'
 version: 0.1.0
 
@@ -20,3 +20,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/projects/
