--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: ^0.14.2
+    
+  go_router: ^14.6.3
   google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
   flutter_lints: ^5.0.0
   test: ^1.25.8
+
+  flutter_launcher_icons: ^0.14.2
 
 flutter:
   uses-material-design: true
