--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     
   go_router: ^14.6.3
   google_fonts: ^6.2.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +28,4 @@ flutter:
   assets:
     - assets/projects/
     - assets/me/
+    - assets/contact/
