--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Build and deploy to Github Pages
 on:
   push:
     branches:
-      - portfolio # TODO: Should only run on main
+      - main # TODO: Should only run on main
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
