--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
     
+  flutter_markdown: ^0.7.5
   go_router: ^14.6.3
   google_fonts: ^6.2.1
   url_launcher: ^6.3.1
@@ -29,3 +30,4 @@ flutter:
     - assets/projects/
     - assets/me/
     - assets/contact/
+    - assets/writing/
