--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
     
   flutter_markdown: ^0.7.5
+  flutter_svg: ^2.0.17
   go_router: ^14.6.3
   google_fonts: ^6.2.1
   url_launcher: ^6.3.1
