--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^2.0.17
   go_router: ^14.6.3
   google_fonts: ^6.2.1
+  intl: ^0.20.1
   url_launcher: ^6.3.1
 
 dev_dependencies:
