--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   go_router: ^14.6.3
   google_fonts: ^6.2.1
   intl: ^0.20.1
+  markdown: ^7.3.0
   url_launcher: ^6.3.1
 
 dev_dependencies:
