--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.20.1
   markdown: ^7.3.0
+  timelines_plus: ^1.0.6
   url_launcher: ^6.3.1
 
 dev_dependencies:
