--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   markdown: ^7.3.0
   timelines_plus: ^1.0.6
   url_launcher: ^6.3.1
+  collection: ^1.19.0
 
 dev_dependencies:
   flutter_test:
