--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   timelines_plus: ^1.0.6
   url_launcher: ^6.3.1
   collection: ^1.19.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +27,8 @@ dev_dependencies:
     
   flutter_lints: ^5.0.0
   test: ^1.25.8
+  build_runner: ^2.3.3
+  json_serializable: ^6.8.0
 
   flutter_launcher_icons: ^0.14.2
 
