--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   url_launcher: ^6.3.1
   collection: ^1.19.0
   json_annotation: ^4.9.0
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
